# daw

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md
docs/: architechture.md  cmake-integration.md  input-handling.md
include/engine/: dltools.h  engine.h  fov.h  hashmap.h  input.h  list.h  logging.h  memory.h  rendering.h  resources.h  stack.h  state.h  types.h  ui.h  utils.h  vector.h
src/: CMakeLists.txt  btree.c  dltools.c  engine.c  fov.c  hashmap.c  input.c  logging.c  main.c  memory.c  rendering.c  stack.c  state.c  ui_positioning.c  ui_rendering.c  utils.c  vector.c
src/core/: CMakeLists.txt
src/core/include/engine/: engine.h
src/core/include/engine/core/: dltools.h  logging.h  memory.h  platform.h  state.h  thread.h  types.h
src/core/src/: dltools.c  logging.c  loop.c  memory.c  state.c  thread.c
src/ctrl/: CMakeLists.txt
src/ctrl/include/engine/ctrl/: input.h  scancodes.h
src/ctrl/src/: input.c
src/rendering/: CMakeLists.txt  rendering.c
src/rendering/include/engine/rendering/: rendering.h  window.h
src/rendering/src/: gl.c  rendering.c  window.c
src/resources/: CMakeLists.txt
src/resources/include/engine/: resources.h
src/resources/include/engine/resources/: model.h  texture.h
src/resources/src/: model.c  resources.c  textures.c
src/ui/: CMakeLists.txt  rendering.c
src/ui/include/engine/: ui.h
src/ui/include/engine/ui/: ui.h
src/ui/src/: positioning.c  rendering.c
src/utils/: CMakeLists.txt  fov.c
src/utils/include/engine/: utils.h
src/utils/include/engine/utils/: btree.h  fov.h  hashmap.h  list.h  stack.h  utils.h  vector.h
src/utils/src/: btree.c  fov.c  hashmap.c  misc.c  stack.c  vector.c
tools/cmake/: DawAddState.cmake  configure.h.in  list_of_states.h.in
tools/scripts/: lint  scaling.py
